Name:                ut-haskell
Version:             0.1
Synopsis:            Unquantifiable Treasures - Haskell Microservice
Description:         Contains the budget logic
License:             GPL-3
Author:              George Boyle
Maintainer:          george@thebuds.net
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable ut-haskell
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                     >= 0.8,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    HUnit                     >= 1.2.5.2,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    text                      >= 1.2.0.4

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
